--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,19 @@
-.page-container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+@media screen and (max-width: 767px) {
+  .page-container {
+    width: 480px;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 60px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
+
+// .page-container {
+//   width: 1200px;
+//   padding-left: 15px;
+//   padding-right: 15px;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
