--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,13 +1,14 @@
-@media screen and (max-width: 767px) {
-  .page-container {
-    width: 480px;
-    padding-top: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 60px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+// Styles for mobile
+.page-container {
+  max-width: 480px;
+  // padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  // padding-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 768px) {
 }
 
 // .page-container {
