--- a/sass/base/_sections.scss
+++ b/sass/base/_sections.scss
@@ -1,4 +1,18 @@
 .base-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  // .base-section {
+  //   padding-top: 94px;
+  //   padding-bottom: 94px;
+  // }
+}
+
+@media screen and (min-width: 1200px) {
+  .base-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
