--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -9,6 +9,15 @@
   margin-right: auto;
 }
 @media screen and (min-width: 768px) {
+  .page-container {
+    max-width: 768px;
+    // // padding-top: 15px;
+    // padding-left: 15px;
+    // padding-right: 15px;
+    // // padding-bottom: 60px;
+    // margin-left: auto;
+    // margin-right: auto;
+  }
 }
 
 // .page-container {
