--- a/sass/base/_normalization-tegs.scss
+++ b/sass/base/_normalization-tegs.scss
@@ -2,10 +2,15 @@ body {
   font-family: Roboto, sans-serif;
   color: $main-black;
   letter-spacing: 0.03em;
+  max-width: 100%;
+  // margin-left: auto;
+  // margin-top: auto;
 }
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 ul {
