--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -1,20 +1,20 @@
 .section-title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   margin-top: 0;
-  margin-bottom: 50px;
-}
-
-.hero__title {
-  margin-top: 0;
   margin-bottom: 30px;
-
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-align: center;
-  text-transform: uppercase;
 }
+
+@media screen and (min-width: 768px) {
+}
+
+// .section-title {
+//   font-weight: 700;
+//   font-size: 36px;
+//   line-height: 1.17;
+//   text-align: center;
+//   margin-top: 0;
+//   margin-bottom: 50px;
+// }
