--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -21,6 +21,27 @@
 }
 
 @media screen and (min-width: 768px) {
+  .logo {
+    display: inline-block;
+
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    letter-spacing: 0.03em;
+    line-height: 1.2;
+    text-decoration: none;
+  }
+
+  .header-content__logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+    margin-right: 88px;
+    color: $logo-black;
+  }
+
+  .logo__text-blue {
+    color: $main-blue;
+  }
 }
 // .logo {
 //   display: inline-block;
