--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,24 +11,35 @@
 
 .footer-content__wrapper {
   display: flex;
-  justify-content: space-between;
-  align-items: baseline; /*test*/
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-content_left-side {
   display: flex;
-  align-items: baseline;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 60px;
 
-  width: calc((100% - 30px) / 2);
+  width: 100%;
+  // width: calc((100% - 30px) / 2);
 }
 
 .footer-content_right-side {
-  width: calc((100% - 30px) / 2);
+  // width: calc((100% - 30px) / 2);
+  width: 100%;
 }
 
 .footer-content_left-side-left-part {
-  width: calc((100% - 30px) / 2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+
+  width: 100%;
+  // width: calc((100% - 30px) / 2);
   /* margin-right: 86px; */
 }
 
@@ -47,7 +58,7 @@
 
 .address-text_info {
   margin-top: 0;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .footer-contacts-list__item:not(:last-child) {
@@ -55,6 +66,10 @@
 }
 
 .footer-contacts-list__item-link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
 
@@ -75,7 +90,11 @@
 }
 
 .footer-content_left-side-right-part {
-  width: calc((100% - 30px) / 2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  // width: calc((100% - 30px) / 2);
 }
 
 .footer-content_left-side-right-part-accept {
@@ -128,6 +147,319 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
 
   color: $main-white;
 }
+
+@media screen and (min-width: 768px) {
+  .footer-content {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    font-size: 14px;
+    line-height: 1.71;
+
+    color: $main-white;
+    background-color: $background-black;
+  }
+
+  .footer-content__wrapper {
+    display: flex;
+    flex-direction: column;
+    // justify-content: baseline;
+    align-items: center;
+  }
+
+  .footer-content_left-side {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 60px;
+
+    width: 100%;
+    // width: calc((100% - 30px) / 2);
+  }
+
+  .footer-content_right-side {
+    // width: calc((100% - 30px) / 2);
+    width: 100%;
+  }
+
+  .footer-content_left-side-left-part {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 60px;
+
+    // width: 100%;
+    width: calc((100% - 30px) / 2);
+    /* margin-right: 86px; */
+  }
+
+  .footer-content__logo {
+    margin-bottom: 20px;
+
+    color: $main-white;
+  }
+
+  .address-text {
+    margin-top: 0;
+    // margin-bottom: 9px;
+
+    font-style: normal;
+  }
+
+  .address-text_info {
+    margin-top: 0;
+    margin-bottom: 8px;
+  }
+
+  .footer-contacts-list__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+
+  .footer-contacts-list__item-link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    color: rgba(255, 255, 255, 0.6);
+    font-style: normal;
+
+    text-decoration: none;
+
+    &:hover,
+    &:focus {
+      color: $main-blue;
+
+      transition-property: color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .footer-mail {
+    margin-bottom: 6px;
+  }
+
+  .footer-content_left-side-right-part {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    width: calc((100% - 30px) / 2);
+  }
+
+  .footer-content_left-side-right-part-accept {
+    margin-top: 0;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 1.17;
+  }
+
+  .footer-social-links {
+    display: flex;
+  }
+  .footer-social-links_item-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: $background-social;
+
+    &:hover,
+    &:focus {
+      background-color: $main-blue;
+
+      transition-property: background-color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .footer-social-links_item:not(:last-child) {
+    margin-right: 10px;
+  }
+
+  .footer-social-links_item-icon {
+    width: 20px;
+    height: 20px;
+    fill: $main-white;
+  }
+
+  .footer-content_right-side-text {
+    margin-top: 0;
+    margin-bottom: 20px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-align: center;
+
+    color: $main-white;
+  }
+}
+/////////////@at-root
+
+// .footer-content {
+//   padding-top: 60px;
+//   padding-bottom: 60px;
+
+//   font-size: 14px;
+//   line-height: 1.71;
+
+//   color: $main-white;
+//   background-color: $background-black;
+// }
+
+// .footer-content__wrapper {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+// .footer-content_left-side {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   margin-bottom: 60px;
+
+//   width: 100%;
+//   // width: calc((100% - 30px) / 2);
+// }
+
+// .footer-content_right-side {
+//   // width: calc((100% - 30px) / 2);
+//   width: 100%;
+// }
+
+// .footer-content_left-side-left-part {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   margin-bottom: 60px;
+
+//   width: 100%;
+//   // width: calc((100% - 30px) / 2);
+//   /* margin-right: 86px; */
+// }
+
+// .footer-content__logo {
+//   margin-bottom: 20px;
+
+//   color: $main-white;
+// }
+
+// .address-text {
+//   margin-top: 0;
+//   // margin-bottom: 9px;
+
+//   font-style: normal;
+// }
+
+// .address-text_info {
+//   margin-top: 0;
+//   margin-bottom: 8px;
+// }
+
+// .footer-contacts-list__item:not(:last-child) {
+//   margin-bottom: 10px;
+// }
+
+// .footer-contacts-list__item-link {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+
+//   color: rgba(255, 255, 255, 0.6);
+//   font-style: normal;
+
+//   text-decoration: none;
+
+//   &:hover,
+//   &:focus {
+//     color: $main-blue;
+
+//     transition-property: color;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+// }
+
+// .footer-mail {
+//   margin-bottom: 6px;
+// }
+
+// .footer-content_left-side-right-part {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+
+//   // width: calc((100% - 30px) / 2);
+// }
+
+// .footer-content_left-side-right-part-accept {
+//   margin-top: 0;
+//   margin-bottom: 20px;
+//   text-transform: uppercase;
+//   font-weight: 700;
+//   line-height: 1.17;
+// }
+
+// .footer-social-links {
+//   display: flex;
+// }
+// .footer-social-links_item-link {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+
+//   width: 44px;
+//   height: 44px;
+//   border-radius: 50%;
+//   background-color: $background-social;
+
+//   &:hover,
+//   &:focus {
+//     background-color: $main-blue;
+
+//     transition-property: background-color;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+// }
+
+// .footer-social-links_item:not(:last-child) {
+//   margin-right: 10px;
+// }
+
+// .footer-social-links_item-icon {
+//   width: 20px;
+//   height: 20px;
+//   fill: $main-white;
+// }
+
+// .footer-content_right-side-text {
+//   margin-top: 0;
+//   margin-bottom: 20px;
+
+//   font-weight: 700;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.03em;
+//   text-transform: uppercase;
+//   text-align: center;
+
+//   color: $main-white;
+// }
