--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,30 @@
-@media screen and (max-width: 767px) {
-  .header-content {
-    border-bottom: solid 1px;
-    border-bottom-color: $header-line-color;
+.header-content {
+  border-bottom: solid 1px;
+  border-bottom-color: $header-line-color;
 
-    // font-weight: 500;
-    // font-size: 14px;
-    // line-height: 1.17;
-    // letter-spacing: 0.02em;
-    text-decoration: none;
-  }
+  // font-weight: 500;
+  // font-size: 14px;
+  // line-height: 1.17;
+  // letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+  // .header-content {
+  //   border-bottom: solid 1px;
+  //   border-bottom-color: $header-line-color;
+
+  //   // font-weight: 500;
+  //   // font-size: 14px;
+  //   // line-height: 1.17;
+  //   // letter-spacing: 0.02em;
+  //   text-decoration: none;
+}
+
+.header-content__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 // .header-content {
