--- a/sass/layout/_sec-hero.scss
+++ b/sass/layout/_sec-hero.scss
@@ -1,13 +1,13 @@
 .base-section--hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
 
   background-image: linear-gradient(
       90deg,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url('../images/hero-bg.png');
+    url('../images/mobile/hero-bg.png');
   background-size: cover;
 
   background-color: $background-hero;
@@ -20,6 +20,95 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  max-width: 700px;
 }
+
+.hero__title {
+  margin-top: 0;
+  margin-bottom: 30px;
+  max-width: 360px;
+
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+@media scrren and (min-width: 768px) {
+  .base-section--hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+
+    background-image: linear-gradient(
+        90deg,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../images/tablet/hero-bg.png');
+    background-size: cover;
+
+    background-color: $background-hero;
+
+    color: $main-white;
+  }
+
+  .hero__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    max-width: 360px;
+  }
+
+  .hero__title {
+    margin-top: 0;
+    margin-bottom: 30px;
+
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-align: center;
+    text-transform: uppercase;
+  }
+}
+
+// .base-section--hero {
+//   padding-top: 200px;
+//   padding-bottom: 200px;
+
+//   background-image: linear-gradient(
+//       90deg,
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url('../images/hero-bg.png');
+//   background-size: cover;
+
+//   background-color: $background-hero;
+
+//   color: $main-white;
+// }
+
+// .hero__wrapper {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+
+//   max-width: 700px;
+// }
+
+// .hero__title {
+//   margin-top: 0;
+//   margin-bottom: 30px;
+
+//   font-weight: 900;
+//   font-size: 44px;
+//   line-height: 1.36;
+//   letter-spacing: 0.06em;
+//   text-align: center;
+//   text-transform: uppercase;
+// }
