--- a/sass/layout/_sec-regular-customers.scss
+++ b/sass/layout/_sec-regular-customers.scss
@@ -1,5 +1,7 @@
 .regular-customers {
   display: flex;
+  flex-wrap: wrap;
+
   margin-top: -30px;
   margin-left: -30px;
 }
@@ -7,7 +9,7 @@
 .regular-customers__list-item {
   margin-left: 30px;
   margin-top: 30px;
-  width: calc((100% - 6 * 30px) / 6);
+  width: calc((100% - 2 * 30px) / 2);
 }
 
 .regular-customers__item-link {
@@ -45,3 +47,100 @@
 
   fill: $main-icons;
 }
+
+@media screen and (min-width: 768px) {
+  .regular-customers {
+    display: flex;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+
+  .regular-customers__list-item {
+    margin-left: 30px;
+    margin-top: 30px;
+    width: calc((100% - 3 * 30px) / 3);
+  }
+
+  .regular-customers__item-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 92px;
+    border-radius: 4px;
+    border: 1px solid $main-icons;
+
+    &:hover,
+    &:focus {
+      border-color: $main-blue;
+
+      transition-property: border-color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+      & .regular-customers__item-logo {
+        fill: $main-blue;
+
+        transition-property: fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      }
+    }
+  }
+
+  .regular-customers__item-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    fill: $main-icons;
+  }
+}
+// .regular-customers {
+//   display: flex;
+//   margin-top: -30px;
+//   margin-left: -30px;
+// }
+
+// .regular-customers__list-item {
+//   margin-left: 30px;
+//   margin-top: 30px;
+//   width: calc((100% - 6 * 30px) / 6);
+// }
+
+// .regular-customers__item-link {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+
+//   width: 100%;
+//   height: 92px;
+//   border-radius: 4px;
+//   border: 1px solid $main-icons;
+
+//   &:hover,
+//   &:focus {
+//     border-color: $main-blue;
+
+//     transition-property: border-color;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+//     & .regular-customers__item-logo {
+//       fill: $main-blue;
+
+//       transition-property: fill;
+//       transition-duration: 250ms;
+//       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//     }
+//   }
+// }
+
+// .regular-customers__item-logo {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+
+//   fill: $main-icons;
+// }
