--- a/sass/layout/_sec-team.scss
+++ b/sass/layout/_sec-team.scss
@@ -3,26 +3,26 @@
 }
 
 .team-list {
-  display: flex;
-  flex-wrap: wrap;
-
-  margin-left: -30px;
-  margin-top: -30px;
+  display: block;
 }
 
 .team-list__item {
-  width: calc((100% - 4 * 30px) / 4);
-  margin-left: 30px;
-  margin-top: 30px;
+  // width: calc((100% - 4 * 30px) / 4);
+  // margin-left: 30px;
+  // margin-top: 30px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
+.team-list__item-image {
+  width: 100%;
+}
+
 .team-list_item-description {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 24px;
   padding-right: 30px;
   padding-left: 30px;
   border-bottom-left-radius: 4px;
@@ -54,10 +54,16 @@
 .social-links {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .social-links__item {
   display: flex;
+
+  &:not(:last-child) {
+    margin-right: 10px;
+    margin-bottom: 30px;
+  }
 }
 
 .social-links__item-link {
@@ -94,3 +100,198 @@
   height: 20px;
   fill: $main-icons;
 }
+
+@media screen and (min-width: 768px) {
+  .base-section--team {
+    background-color: $background-sahara;
+  }
+
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+
+  .team-list__item {
+    width: calc((100% - 2 * 30px) / 2);
+    margin-left: 30px;
+    margin-top: 30px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
+  .team-list_item-description {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 30px;
+    padding-left: 30px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+
+    background-color: $main-white;
+  }
+
+  .team-list__item-name {
+    margin-top: 0;
+    margin-bottom: 10px;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.17;
+    text-align: center;
+  }
+
+  .team-list__item-position {
+    margin-top: 0;
+    margin-bottom: 16px;
+
+    font-size: 16px;
+    line-height: 1.17;
+    text-align: center;
+    color: $main-gray;
+  }
+
+  .social-links {
+    display: flex;
+    justify-content: center;
+  }
+
+  .social-links__item {
+    display: flex;
+  }
+
+  .social-links__item-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: transparent;
+
+    &:hover,
+    &:focus {
+      background-color: $main-blue;
+
+      transition-property: background-color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+      & .social-links__item-icon {
+        background-color: $main-blue;
+        fill: $main-white;
+
+        transition-property: background-color, fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      }
+    }
+  }
+
+  .social-links__item-icon {
+    width: 20px;
+    height: 20px;
+    fill: $main-icons;
+  }
+}
+// .base-section--team {
+//   background-color: $background-sahara;
+// }
+
+// .team-list {
+//   display: flex;
+//   flex-wrap: wrap;
+
+//   margin-left: -30px;
+//   margin-top: -30px;
+// }
+
+// .team-list__item {
+//   width: calc((100% - 4 * 30px) / 4);
+//   margin-left: 30px;
+//   margin-top: 30px;
+//   border-bottom-left-radius: 4px;
+//   border-bottom-right-radius: 4px;
+//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//     0px 2px 1px rgba(0, 0, 0, 0.2);
+// }
+
+// .team-list_item-description {
+//   padding-top: 30px;
+//   padding-bottom: 30px;
+//   padding-right: 30px;
+//   padding-left: 30px;
+//   border-bottom-left-radius: 4px;
+//   border-bottom-right-radius: 4px;
+
+//   background-color: $main-white;
+// }
+
+// .team-list__item-name {
+//   margin-top: 0;
+//   margin-bottom: 10px;
+
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 1.17;
+//   text-align: center;
+// }
+
+// .team-list__item-position {
+//   margin-top: 0;
+//   margin-bottom: 16px;
+
+//   font-size: 16px;
+//   line-height: 1.17;
+//   text-align: center;
+//   color: $main-gray;
+// }
+
+// .social-links {
+//   display: flex;
+//   justify-content: center;
+// }
+
+// .social-links__item {
+//   display: flex;
+// }
+
+// .social-links__item-link {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+
+//   width: 44px;
+//   height: 44px;
+//   border-radius: 50%;
+//   background-color: transparent;
+
+//   &:hover,
+//   &:focus {
+//     background-color: $main-blue;
+
+//     transition-property: background-color;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+//     & .social-links__item-icon {
+//       background-color: $main-blue;
+//       fill: $main-white;
+
+//       transition-property: background-color, fill;
+//       transition-duration: 250ms;
+//       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//     }
+//   }
+// }
+
+// .social-links__item-icon {
+//   width: 20px;
+//   height: 20px;
+//   fill: $main-icons;
+// }
