--- a/css/main.css
+++ b/css/main.css
@@ -819,8 +819,8 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 60px;
+    align-items: flex-start;
+    margin-bottom: 0;
     width: 100%;
   }
   .footer-content_right-side {
@@ -920,7 +920,7 @@ ul {
 }
 
 .footer-form__input {
-  width: 100%;
+  max-width: 450px;
   height: 50px;
   margin-bottom: 20px;
   padding-top: 16px;
@@ -951,7 +951,6 @@ ul {
 .footer-form__wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
 }
 
