--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,5 +1,5 @@
 .footer-form__input {
-  width: 100%;
+  max-width: 450px;
   height: 50px;
 
   margin-bottom: 20px;
@@ -35,7 +35,7 @@
 .footer-form__wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
   justify-content: space-between;
 }
 
