--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -175,8 +175,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 60px;
+    align-items: flex-start;
+    // margin-bottom: 60px;
+    margin-bottom: 0;
 
     width: 100%;
     // width: calc((100% - 30px) / 2);
