--- a/sass/layout/_sec-features.scss
+++ b/sass/layout/_sec-features.scss
@@ -20,12 +20,17 @@
     background-repeat: no-repeat;
     background-size: 70px 70px;
     background-position: 50% 50%;
-  }
-}
 
-@media screen and (max-width: 767px) {
-  .features__list-item :last-child {
-    margin-bottom: 30px;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+      // background-color: tomato;
+    }
   }
 }
 
