--- a/css/main.css
+++ b/css/main.css
@@ -1190,6 +1190,10 @@ ul {
     font-size: 16px;
     line-height: 1.62;
   }
+  .examples-filter__item {
+    margin-left: 0;
+    margin-top: 0;
+  }
   .examples-filter__item:not(:last-child) {
     margin-right: 8px;
   }
@@ -1215,6 +1219,7 @@ ul {
   }
   .examples-list {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
@@ -1275,7 +1280,7 @@ ul {
     margin-top: 0;
     margin-bottom: 4px;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 17px;
     line-height: 2;
     letter-spacing: 0.06em;
     color: #212121;
