--- a/sass/layout/_sec-examples.scss
+++ b/sass/layout/_sec-examples.scss
@@ -150,6 +150,11 @@
     line-height: 1.62;
   }
 
+  .examples-filter__item {
+    margin-left: 0;
+    margin-top: 0;
+  }
+
   .examples-filter__item:not(:last-child) {
     margin-right: 8px;
   }
@@ -184,6 +189,7 @@
 
   .examples-list {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
 
     margin-left: -30px;
@@ -253,6 +259,7 @@
   }
 
   .examples-list__item-description {
+    // height: 145px; //u vseh odinakovo
     border-right: 1px solid #eeeeee;
     border-bottom: 1px solid #eeeeee;
     border-left: 1px solid #eeeeee;
@@ -267,7 +274,7 @@
     margin-bottom: 4px;
 
     font-weight: 700;
-    font-size: 18px;
+    font-size: 17px;
     line-height: 2;
     letter-spacing: 0.06em;
 
