--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -155,6 +155,10 @@
     }
   }
 }
+
+@media screen and (min-width: 1200px) {
+}
+
 // .footer-form__input {
 //   width: 358px;
 //   height: 50px;
