--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -326,6 +326,9 @@
   padding: 40px;
 }
 
+@media screen and (min-width: 1200px) {
+}
+
 // .modal-form {
 //   display: flex;
 //   flex-direction: column;
