--- a/sass/layout/_sec-features.scss
+++ b/sass/layout/_sec-features.scss
@@ -135,6 +135,10 @@
     color: $main-gray;
   }
 }
+
+@media screen and (min-width: 1200px) {
+}
+
 // .features__list {
 //   display: flex;
 //   flex-wrap: wrap;
