--- a/sass/layout/_sec-hero.scss
+++ b/sass/layout/_sec-hero.scss
@@ -75,6 +75,9 @@
   }
 }
 
+@media screen and (min-width: 1200px) {
+}
+
 // .base-section--hero {
 //   padding-top: 200px;
 //   padding-bottom: 200px;
