--- a/sass/layout/_sec-regular-customers.scss
+++ b/sass/layout/_sec-regular-customers.scss
@@ -97,6 +97,10 @@
     fill: $main-icons;
   }
 }
+
+@media screen and (min-width: 1200px) {
+}
+
 // .regular-customers {
 //   display: flex;
 //   margin-top: -30px;
