--- a/sass/layout/_sec-team.scss
+++ b/sass/layout/_sec-team.scss
@@ -205,6 +205,10 @@
     fill: $main-icons;
   }
 }
+
+@media screen and (min-width: 1200px) {
+}
+
 // .base-section--team {
 //   background-color: $background-sahara;
 // }
