--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -10,6 +10,9 @@
 @media screen and (min-width: 768px) {
 }
 
+@media screen and (min-width: 1200px) {
+}
+
 // .section-title {
 //   font-weight: 700;
 //   font-size: 36px;
