--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -33,3 +33,36 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
+.mobile-menu-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+  width: 40px;
+  height: 40px;
+
+  border: transparent;
+  background-color: $main-white;
+  cursor: pointer;
+}
+
+.mobile-menu-button__icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu-button:hover .mobile-menu-button__icon,
+.mobile-menu-button:focus .mobile-menu-button__icon {
+  fill: $main-blue;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu-button {
+    display: none;
+  }
+}
