--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -27,6 +27,9 @@
   align-items: center;
 }
 
+@media screen and (min-width: 1200px) {
+}
+
 // .header-content {
 //   border-bottom: solid 1px;
 //   border-bottom-color: $header-line-color;
