--- a/sass/layout/_sec-examples.scss
+++ b/sass/layout/_sec-examples.scss
@@ -291,6 +291,10 @@
     color: $main-gray;
   }
 }
+
+@media screen and (min-width: 1200px) {
+}
+
 // .examples {
 //   padding-top: 94px;
 //   padding-bottom: 94px;
