--- a/sass/layout/_sec-services.scss
+++ b/sass/layout/_sec-services.scss
@@ -4,6 +4,10 @@
 
 @media screen and (min-width: 768px) {
 }
+
+@media screen and (min-width: 1200px) {
+}
+
 // .base-section--services {
 //   padding-top: 0;
 // }
