--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,3 +18,4 @@
 @import 'components/footer-form';
 @import 'layout/sec-examples';
 @import 'components/modal-form';
+@import 'components/mobile-menu';
