--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -21,6 +21,13 @@
 }
 
 @media screen and (min-width: 1200px) {
+  .page-container {
+    max-width: 1200px;
+    // padding-left: 15px;
+    // padding-right: 15px;
+    // margin-left: auto;
+    // margin-right: auto;
+  }
 }
 // .page-container {
 //   width: 1200px;
