--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -11,6 +11,14 @@
 }
 
 @media screen and (min-width: 1200px) {
+  .section-title {
+    // font-weight: 700;
+    font-size: 36px;
+    // line-height: 1.17;
+    // text-align: center;
+    // margin-top: 0;
+    margin-bottom: 50px;
+  }
 }
 
 // .section-title {
